--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "babel-node src/server.js",
+    "dev": "nodemon npm start",
     "test": "cross-env NODE_NO_WARNINGS=1 take-home-integration-test features --no-color --check-new --command 'npm start' --port 8000 --out-file integration-test.log -- --tags 'not @skip'"
   },
   "engines": {
@@ -32,7 +33,8 @@
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
